--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>나의 개인 웹사이트</title>
+    <title>Heuijee Yun</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -12,10 +12,10 @@
         <div class="profile-container">
             <div class="profile-photo">
                 <!-- 프로필 사진을 여기에 추가 (이미지 파일을 생성해야 합니다) -->
-                <img src="images/profile.jpg" alt="프로필 사진">
+                <img src="images/profile.jpg" alt="Profile Photo">
             </div>
-            <h1 class="name">당신의 이름</h1>
-            <p class="title">직함, 학위 또는 분야</p>
+            <h1 class="name">Heuijee Yun</h1>
+            <p class="title">Ph.D. Student</p>
             
             <div class="social-icons">
                 <a href="#" class="social-icon"><i class="fas fa-dove"></i></a>
@@ -30,12 +30,12 @@
         <nav class="main-nav">
             <div class="nav-container">
                 <ul>
-                    <li><a href="#about">소개</a></li>
-                    <li><a href="#research">연구</a></li>
-                    <li><a href="#publications">출판물</a></li>
-                    <li><a href="#teaching">교육</a></li>
-                    <li><a href="#news">소식</a></li>
-                    <li><a href="#contact">연락처</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#research">Research</a></li>
+                    <li><a href="#publications">Publications</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#cv">CV</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -43,11 +43,11 @@
 
     <section id="about" class="about">
         <div class="container">
-            <h2 class="section-title">소개</h2>
+            <h2 class="section-title">About</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>안녕하세요, 저는 웹 개발에 관심이 많은 개발자입니다. 창의적인 문제 해결과 사용자 친화적인 디자인을 좋아합니다.</p>
-                    <p>이 웹사이트는 GitHub Pages를 사용하여 만들어졌으며, 제 포트폴리오와 프로젝트를 소개하기 위한 공간입니다.</p>
+                    <p>Hello, I am a researcher with a keen interest in web development. I enjoy creative problem-solving and user-friendly design.</p>
+                    <p>This website was created using GitHub Pages and serves as a space to showcase my portfolio and projects.</p>
                 </div>
             </div>
         </div>
@@ -55,62 +55,58 @@
 
     <section id="research" class="research">
         <div class="container">
-            <h2 class="section-title">연구</h2>
+            <h2 class="section-title">Research</h2>
             <div class="research-content">
-                <p>이 섹션에서는 귀하의 연구 분야와 관심사에 대해 설명합니다.</p>
-                <!-- 연구 내용 추가 -->
+                <p>This section describes my research areas and interests.</p>
+                <!-- Add research content here -->
             </div>
         </div>
     </section>
 
     <section id="publications" class="publications">
         <div class="container">
-            <h2 class="section-title">출판물</h2>
+            <h2 class="section-title">Publications</h2>
             <div class="publications-content">
                 <ul class="publications-list">
                     <li>
-                        <h3>논문 제목 1</h3>
-                        <p>저자, 저널, 연도, 페이지</p>
+                        <h3>Paper Title 1</h3>
+                        <p>Authors, Journal, Year, Pages</p>
                     </li>
                     <li>
-                        <h3>논문 제목 2</h3>
-                        <p>저자, 저널, 연도, 페이지</p>
+                        <h3>Paper Title 2</h3>
+                        <p>Authors, Journal, Year, Pages</p>
                     </li>
-                    <!-- 더 많은 출판물 추가 -->
+                    <!-- Add more publications here -->
                 </ul>
             </div>
         </div>
     </section>
 
-    <section id="teaching" class="teaching">
+    <section id="projects" class="projects">
         <div class="container">
-            <h2 class="section-title">교육</h2>
-            <div class="teaching-content">
-                <p>이 섹션에서는 귀하의 교육 활동과 과목에 대해 설명합니다.</p>
-                <!-- 교육 내용 추가 -->
+            <h2 class="section-title">Projects</h2>
+            <div class="projects-content">
+                <p>This section describes my projects and initiatives.</p>
+                <!-- Add projects content here -->
             </div>
         </div>
     </section>
 
-    <section id="news" class="news">
+    <section id="cv" class="cv">
         <div class="container">
-            <h2 class="section-title">소식</h2>
-            <div class="news-content">
-                <div class="news-item">
-                    <h3>최신 소식 1</h3>
-                    <p class="date">2023년 3월 15일</p>
-                    <p>소식에 대한 간단한 설명입니다.</p>
-                </div>
-                <!-- 더 많은 소식 추가 -->
+            <h2 class="section-title">Curriculum Vitae</h2>
+            <div class="cv-content">
+                <p>This section contains my academic and professional background.</p>
+                <!-- Add CV content here -->
             </div>
         </div>
     </section>
 
     <section id="contact" class="contact">
         <div class="container">
-            <h2 class="section-title">연락처</h2>
+            <h2 class="section-title">Contact</h2>
             <div class="contact-content">
-                <p>아래의 방법으로 연락해 주세요:</p>
+                <p>Please reach out to me through the following channels:</p>
                 <div class="contact-links">
                     <a href="mailto:your-email@example.com"><i class="fas fa-envelope"></i> your-email@example.com</a>
                     <a href="https://github.com/yourusername"><i class="fab fa-github"></i> GitHub</a>
@@ -122,7 +118,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 개인 웹사이트. All Rights Reserved.</p>
+            <p>&copy; 2023 Heuijee Yun. All Rights Reserved.</p>
         </div>
     </footer>
 
