--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
                 <a href="#" class="social-icon"><i class="fab fa-pinterest-p"></i></a>
                 <a href="#" class="social-icon"><i class="fab fa-google"></i></a>
-                <a href="#" class="social-icon"><i class="fab fa-researchgate"></i></a>
+                <a href="#" class="social-icon"><i class="fas fa-laptop-code"></i></a>
                 <a href="#" class="social-icon"><i class="fab fa-orcid"></i></a>
             </div>
         </div>
