--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <div class="header-line"></div>
     </header>
 
     <div class="download-cv">
