--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="homepage">
     <header>
-        <div class="site-name">Heuijee Yun</div>
+        <div class="site-name"><a href="index.html">Heuijee Yun</a></div>
         <nav class="main-menu">
             <ul>
                 <li><a href="about.html">About</a></li>
