--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                     <textarea id="message" name="message" rows="8" required></textarea>
                 </div>
                 
-                <div class="form-group send-button-container">
+                <div class="send-button-container">
                     <button type="submit" class="send-button">Send!</button>
                 </div>
             </form>
