--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -75,11 +74,7 @@
             const resultElement = document.getElementById('form-result');
             resultElement.innerHTML = `
                 <div class="submission-success">
-                    <h3>메시지가 성공적으로 전송되었습니다!</h3>
-                    <p><strong>이름:</strong> ${name}</p>
-                    <p><strong>이메일:</strong> ${email}</p>
-                    <p><strong>메시지:</strong></p>
-                    <p>${message}</p>
+                    <h3>Succesfully sended!</h3>
                 </div>
             `;
             
@@ -91,4 +86,3 @@
     </script>
     <script src="js/main.js"></script>
 </body>
-</html> 
