--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,5 @@
-
+<!DOCTYPE html>
+<html lang="en"></html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,9 +56,19 @@
         </div>
     </main>
     
-    <footer class="contact-footer">
-        <div class="contact-copyright">
+    <footer>
+        <div class="copyright">
             <p>&copy; 2025 Heuijee Yun</p>
+        </div>
+        <div class="contact-info">
+            <div class="contact-item">
+                <span class="contact-label">Phone</span>
+                <span class="contact-value">053-950-5548</span>
+            </div>
+            <div class="contact-item">
+                <span class="contact-label">email</span>
+                <span class="contact-value">Heuijee@knu.ac.kr</span>
+            </div>
         </div>
     </footer>
 
@@ -86,3 +97,4 @@
     </script>
     <script src="js/main.js"></script>
 </body>
+</html>
