--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     </div>
     
     <main class="contact-main">
-        <div class="contact-form-container animate-content">
+        <div class="contact-form-container">
             <h1 class="contact-title">Contact me!</h1>
             
             <form id="contact-form" class="contact-form" onsubmit="return handleSubmit(event)">
